--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -128,9 +128,7 @@
     padding: 5rem;
     gap: 2rem;
     width: 100%;
-    background: linear-gradient(to left,
-            white,
-            white,
+    background: linear-gradient(to right,
             white,
             white,
             #faf9dd);
@@ -154,9 +152,7 @@
     gap: 10%;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to right,
-            white,
-            white,
+    background-image: linear-gradient(to left,
             white,
             white,
             #e1f1ff);
