--- a/styles/galeria.module.css
+++ b/styles/galeria.module.css
@@ -1,23 +1,48 @@
 .galeria-container {
     display: grid;
-    grid-template-columns: repeat(2, 300px); 
+    grid-template-columns: repeat(2, 320px); 
     gap: 20px;
     justify-content: center; 
     padding-top: 40px;
     padding-bottom: 100px;
 }
 
-
 .galeria-container a {
     text-decoration: none;
 }
 
+.galeria-container > a:nth-child(1) .card {
+  animation-delay: 0.1s;
+}
 
+.galeria-container > a:nth-child(2) .card {
+  animation-delay: 0.2s;
+}
+
+.galeria-container > a:nth-child(3) .card {
+  animation-delay: 0.3s;
+}
+
+.galeria-container > a:nth-child(4) .card {
+  animation-delay: 0.4s;
+}
+
+
+
+/* MOBILE — 1 coluna com largura mínima */
 @media (max-width: 700px) {
     .galeria-container {
-        grid-template-columns: 1fr; 
+        grid-template-columns: 1fr;
         justify-items: center; 
     }
+}
+
+@media (max-width: 600px) {
+  .card {
+    width: 100%;
+    max-width: 320px;   /* impede de ficar gigante */
+    min-width: 280px;   /* impede de ficar espremido */
+  }
 }
 
 .body-galeria {
